testdata/fixtures/audit/positive/eval_user_input_py_call.py
def run_expression():
    return eval(get_code())
