testdata/fixtures/audit/negative/eval_user_input_neg_constant_py.py
def always_four():
    return eval("2+2")
